fix mailup endpoint
